--- a/slides-pdf.qmd
+++ b/slides-pdf.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Cherry Blossom Peak Bloom Prediction 2026"
-subtitle: "Team 5103 — University of Maryland"
-date: "February 2026"
+author: "Team 5103"
+subtitle: "University of Maryland"
 format:
   beamer:
     theme: Madrid
@@ -23,7 +23,10 @@ header-includes:
   - \usepackage{multirow}
   - \definecolor{cherry}{RGB}{139,34,82}
   - \definecolor{petal}{RGB}{242,166,182}
-  - \setbeamercolor{title}{fg=cherry}
+  - \setbeamercolor{title}{fg=white}
+  - \setbeamercolor{subtitle}{fg=white}
+  - \setbeamercolor{author}{fg=cherry}
+  - \setbeamercolor{date}{fg=cherry}
   - \setbeamercolor{frametitle}{fg=cherry}
   - \setbeamercolor{structure}{fg=cherry}
   - \setbeamertemplate{footline}[frame number]
@@ -128,17 +131,17 @@ tibble(
 
 **NYC enrichment:** `r nrow(nyc_extra)` citizen-science records from Washington Square Park (USA-NPN)
 
-**Enhanced features:** Winter/spring temp, GDD, chill hours, ONI/NAO/PDO, Hopkins index, photoperiod
+**Key features:** Winter/spring mean temperature (primary bloom driver), latitude, longitude, altitude, year trend
 
 ## Models & Methodology
 
 \small
 
-\textbf{Model A — Local Trend} (per site): Recency-weighted quadratic ($w_i = e^{(i-n)/6}$, half-life $\approx$ 6 yr)
+\textbf{Model A — Local Trend} (per site): Weighted quadratic regression, recent years weighted more heavily (~6 yr half-life)
 
-\textbf{Model B — Pooled GAM} (R): $\text{DOY} \sim s(\text{year}) + s(\text{lat}, \text{long}) + s(\text{alt}) + s(\text{obs}) + \text{climate} + \text{source}$
+\textbf{Model B — Pooled GAM} (R): Smooth functions of year, location, altitude + winter/spring temperature
 
-\textbf{Model B$'$ — Gradient Boosted Trees} (Python): 800 trees, Huber loss, lr=0.015, enhanced features
+\textbf{Model B$'$ — Gradient Boosted Trees} (Python): 800 trees, robust loss, same temperature features
 
 \vspace{0.2cm}
 
@@ -146,56 +149,61 @@ tibble(
 tibble(
   Component = c("Blending","Intervals","Cross-language"),
   Method = c(
-    "Site-specific grid search w in [0,1] by 0.02 on rolling backtest",
-    "Conformal: 90th pctl |residuals| per site → ≥90% coverage",
-    paste0("R+Python agree within ", round(avg_gap,1), "d → averaged blend")
+    "Per-site optimal weight between local and global models via rolling backtest",
+    "Conformal: 90th pctl |residuals| per site, >=90% coverage",
+    paste0("R+Python agree within ", round(avg_gap,1), "d, averaged blend")
   )
 ) |> kable(booktabs=TRUE, align="ll")
 ```
 
 \vspace{0.2cm}
 
-\textbf{Key:} Sites with deep history $\rightarrow$ heavier Model A weight. Sparse sites $\rightarrow$ heavier Model B.
+\textbf{Key:} Deep-history sites lean on Model A. Sparse sites lean on Model B.
 
 ## Backtest Results
-
-```{r}
-#| fig-width: 7
-#| fig-height: 2.2
-comp_raw |>
-  filter(year >= 1880) |>
-  ggplot(aes(year, bloom_doy, color = location)) +
-  geom_point(alpha = 0.4, size = 0.6) +
-  geom_smooth(method = "loess", span = 0.4, se = FALSE, linewidth = 0.5) +
-  facet_wrap(~location, scales = "free_x", nrow = 1) +
-  labs(x = "Year", y = "DOY") +
-  theme_minimal(base_size = 8) +
-  theme(legend.position = "none", strip.text = element_text(face = "bold", size=7))
-```
-
-\vspace{0.1cm}
 
 \small
 
 ```{r}
 tibble(
-  Model = c("Local trend only", "Baseline GAM ensemble", "Enhanced global (GBR)", "Enhanced ensemble"),
+  Model = c("Local trend only", "Baseline ensemble", "Enhanced (temp features)", "Final ensemble"),
   `MAE (days)` = c("7.27", "~5.61", "4.52", "**4.23**"),
-  `vs Baseline` = c("—", "—", "+19%", "**+25%**")
+  `Improvement` = c("—", "—", "19%", "**25%**")
 ) |> kable(booktabs=TRUE, align="lrr")
 ```
 
-Bloom advances at all 5 sites — clear climate warming signal. Enhanced model captures GDD/chill dynamics.
+\vspace{0.2cm}
+
+```{r}
+#| fig-width: 7
+#| fig-height: 2.3
+final_sub |>
+  mutate(date_pred  = doy_to_date(target_year, prediction),
+         date_lower = doy_to_date(target_year, lower),
+         date_upper = doy_to_date(target_year, upper),
+         City = loc_names[location],
+         City = reorder(City, prediction)) |>
+  ggplot(aes(y = City)) +
+  geom_segment(aes(x = date_lower, xend = date_upper, yend = City),
+               linewidth = 5, color = "#F2A6B6", alpha = 0.7) +
+  geom_point(aes(x = date_pred), size = 4, color = "#C0392B") +
+  scale_x_date(date_labels = "%b %d") +
+  labs(x = "Date", y = NULL, title="2026 Predictions with 90% Intervals") +
+  theme_minimal(base_size = 10) +
+  theme(panel.grid.major.y = element_blank())
+```
+
+Winter/spring temperature is the dominant driver. Per-site blending and cross-language averaging reduce bias.
 
 ## Inferential Factors
 
 \small
 
-**Global drivers:**
+**Why bloom timing changes:**
 
-- \textbf{Rising temperatures:} 1.1°C warming $\rightarrow$ reduced chill needs + accelerated GDD $\rightarrow$ earlier bloom everywhere
-- \textbf{ENSO:} La Niña cools Pacific NW (delays Vancouver), milder Eastern US (advances DC/NYC). 2025–26 neutral $\rightarrow$ normal timing
-- \textbf{Latitude:} $\sim$1 DOY delay per °N above 35°N. \ \textbf{Altitude:} $\sim$2 days later per 100 m
+- \textbf{Winter warming:} Warmer winters mean trees start spring development earlier
+- \textbf{Spring temperatures:} Earlier warm spells accelerate bloom; late cold snaps delay it
+- \textbf{Latitude:} ~1 day later per °N above 35°N. \ \textbf{Altitude:} ~2 days later per 100 m
 
 **Site-specific drivers:**
 
@@ -289,4 +297,4 @@ if (has_enh) {
 }
 ```
 
-\textbf{Enhanced model:} 25\% lower MAE (4.23 vs 5.61 d). Later predictions reflect better GDD/chill calibration. Tighter intervals from reduced residual variance.
+\textbf{Enhanced model:} 25\% lower MAE (4.23 vs 5.61 d). Temperature features directly model the winter-to-spring warming that triggers bloom. Tighter intervals from reduced residual variance.
